[TASK]    Refactor id variable in BackendModuleController to make extension scanner happy
[TASK]    Add ignore annotations for extension scanner false positives
[TASK]    Replace usage of deprecated functions orX() and andX()
[TASK]    Add label to "Index Overview" widget (shown since TYPO3 12), and use only one color in the bar chart

Version 5.2.0, 8 December 2023
[!!!]     The pagebrowser is now rendered in a different way (using the pagination API). If you used a custom template for the pagebrowser you will have to adopt it. Have a look at Resources/Private/Partials/PageBrowser.html
[TASK]    Use pagination API to render pagination, https://github.com/tpwd/ke_search/issues/174 and https://github.com/tpwd/ke_search/issues/154
[TASK]    Properly type-hint IndexerBase constructor, thanks to hotbytes-dev, https://github.com/tpwd/ke_search/pull/202
[BUGFIX]  Avoid undefined array key warning for "sphinxLimit"

Version 5.1.3, 10 November 2023
[BUGFIX]  Replace all occurences of additional word characters, not only the first one. Thanks to K. Quiatkowski. https://github.com/tpwd/ke_search/issues/19
[TASK]    Show hidden content in backend module "Indexed content" function
[DOCS]    Add hint about using the additional word characters feature for searching for @ when using InnoDB
[BUGFIX]  Fix regression introduced in version 5.0.0 which made empty searches slow because tags were fetched too often, thanks to Stephan Bauer, https://github.com/tpwd/ke_search/issues/4

Version 5.1.2, 27 October 2023
[BUGFIX]  Keep the original value for "loadFlexformsFromOtherCE" even if the search box plugin has an empty value in the FlexForm which lead to empty search results, thanks to Uwe Hawkeye1909, https://github.com/tpwd/ke_search/issues/142

Version 5.1.1, 27 October 2023
[BUGFIX]  Fix regression introduced in 5.1.0 (search was always empty), https://github.com/tpwd/ke_search/issues/195

Version 5.1.0, 20 October 2023